# pttai

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  TODO.md  example.ipynb  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.ipynb
.github/workflows/: ci.yml  docs.yml
COMPARISON/: index.html
EVIDENCE/: index.html
PRE_PUBLISH_CHECKLIST/: index.html
agentic_framework/: graph.py  node.py  state.py
agentic_framework/nodes/: agent_node.py  decision_node.py  input_node.py
api-notes/: index.html
api/advanced/: index.html
api/graph/: index.html
api/nodes/: index.html
api/state/: index.html
coming-from-langgraph/: index.html
demo/: README.md  app.py  requirements.txt
docs/: COMPARISON.md  EVIDENCE.md  PRE_PUBLISH_CHECKLIST.md  api-notes.md  coming-from-langgraph.md  examples.md  getting-started.md  index.md  node-types.md  project.md  quickstart.md  state.md  validator.md
docs/api/: advanced.md  graph.md  nodes.md  state.md
docs/examples/: architectures.md  basics.md
eval/: README.md  loc_compare.py  loc_results.csv  overhead.py  validator_bugs.py
eval/bugbench/: README.md  _common.py  corpus.py  results.csv  results.json  run.py
eval/llmgen/: README.md  adjudicate.md  adjudication.csv  gen.py  results.csv  results.json  run_study.sh  score.py
examples/: _llm.py  index.html  panel.py  parallel_usage.py  sample_usage.py  vs_langgraph.md  vs_langgraph.py
figures/: _compiled_graph.mmd  architecture.mmd  make_charts.py  make_screenshot_mock.py
getting-started/: index.html
nae/: __init__.py  graph.py  node.py  state.py  validation.py
node-types/: index.html
paper/: VIDEO_SCRIPT.md  main.tex  refs.bib
pttai/: __init__.py  graph.py  node.py  state.py  validation.py
quickstart/: index.html
search/: search_index.json
state/: index.html
tests/: conftest.py  test_agent_loop.py  test_autoname.py  test_condition_node.py  test_configurable_fields.py  test_graph_build.py  test_human_node.py  test_interrupt_resume.py  test_invoke_e2e.py  test_invoke_shorthand.py  test_multikey_io.py  test_node_runtime_fixes.py  test_parallel.py  test_placeholders.py  test_prompt_cache.py  test_rag.py  test_resilience.py  test_routing.py  test_schema_free.py  test_schema_free_mapreduce.py  test_state.py  test_stream_async.py  test_token.py  test_validation.py  test_validator_fixes.py
validator/: index.html
(+106 files in other folders)
